--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,76 +1,70 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-}
-
-android {
-    namespace 'com.flaxstudio.wallpaperapp'
-    compileSdk 33
-
-    defaultConfig {
-        applicationId "com.flaxstudio.wallpaperapp"
-        minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    plugins {
+        id 'com.android.application'
+        id 'org.jetbrains.kotlin.android'
     }
+    android {
+        namespace 'com.flaxstudio.wallpaperapp'
+        compileSdk 33
 
-    buildFeatures{
-        viewBinding true
-    }
+        defaultConfig {
+            applicationId "com.flaxstudio.wallpaperapp"
+            minSdk 21
+            targetSdk 33
+            versionCode 1
+            versionName "1.0"
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        }
+
+        buildFeatures{
+            viewBinding true
+        }
+
+        buildTypes {
+            release {
+                minifyEnabled true
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
+        }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+        kotlinOptions {
+            jvmTarget = '1.8'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+
+    dependencies {
+
+        implementation 'androidx.core:core-ktx:1.10.1'
+        implementation 'androidx.appcompat:appcompat:1.6.1'
+        implementation 'com.google.android.material:material:1.9.0'
+        implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+        testImplementation 'junit:junit:4.13.2'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+        implementation 'androidx.core:core:1.10.1'
+
+        // room
+
+        implementation("androidx.room:room-runtime:2.5.2")
+        annotationProcessor("androidx.room:room-compiler:2.5.2")
+
+
+        // navigation
+        implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+        implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+
+        // glide
+        implementation "com.github.bumptech.glide:glide:4.15.1"
+        annotationProcessor "com.github.bumptech.glide:compiler:4.11.0"
+
+        // Retrofit
+        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+        implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+        // coroutines
+        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
-
-dependencies {
-
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'androidx.core:core:1.10.1'
-
-    // room
-    implementation "androidx.room:room-runtime:2.5.2"
-    annotationProcessor "androidx.room:room-compiler:2.5.2"
-    implementation "androidx.room:room-ktx:2.5.2"
-    kapt "androidx.room:room-compiler:2.5.2"
-
-    // ViewModel
-    implementation("androidx.lifecycle:lifecycle-viewmodel:2.6.1")
-    implementation("androidx.lifecycle:lifecycle-livedata:2.6.1")
-
-    // navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
-
-    // glide
-    implementation "com.github.bumptech.glide:glide:4.15.1"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.11.0"
-
-    // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    // coroutines
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
-
-}
