--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
     plugins {
         id 'com.android.application'
         id 'org.jetbrains.kotlin.android'
+//        id 'kotlin-kapt'
     }
     android {
         namespace 'com.flaxstudio.wallpaperapp'
@@ -45,11 +46,11 @@
         androidTestImplementation 'androidx.test.ext:junit:1.1.5'
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
         implementation 'androidx.core:core:1.10.1'
-
         // room
-
-        implementation("androidx.room:room-runtime:2.5.2")
-        annotationProcessor("androidx.room:room-compiler:2.5.2")
+//
+//        implementation"androidx.room:room-runtime:2.5.2"
+//        annotationProcessor "androidx.room:room-compiler:2.5.2"
+//        kapt "androidx.room:room-compiler:2.5.2"
 
 
         // navigation
