--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
     plugins {
         id 'com.android.application'
         id 'org.jetbrains.kotlin.android'
-//        id 'kotlin-kapt'
     }
     android {
         namespace 'com.flaxstudio.wallpaperapp'
@@ -28,11 +27,11 @@
             }
         }
         compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
+            sourceCompatibility JavaVersion.VERSION_17
+            targetCompatibility JavaVersion.VERSION_17
         }
         kotlinOptions {
-            jvmTarget = '1.8'
+            jvmTarget = '17'
         }
     }
 
@@ -47,10 +46,11 @@
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
         implementation 'androidx.core:core:1.10.1'
         // room
-//
-//        implementation"androidx.room:room-runtime:2.5.2"
-//        annotationProcessor "androidx.room:room-compiler:2.5.2"
-//        kapt "androidx.room:room-compiler:2.5.2"
+        def room_version = "2.5.2"
+        implementation "androidx.room:room-runtime:$room_version"
+        annotationProcessor "androidx.room:room-compiler:$room_version"
+        implementation "androidx.room:room-ktx:$room_version"
+        annotationProcessor "androidx.room:room-compiler:$room_version"
 
 
         // navigation
