--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
     plugins {
         id 'com.android.application'
         id 'org.jetbrains.kotlin.android'
+        id 'kotlin-kapt'
     }
     android {
         namespace 'com.flaxstudio.wallpaperapp'
@@ -50,7 +51,7 @@
         implementation "androidx.room:room-runtime:$room_version"
         annotationProcessor "androidx.room:room-compiler:$room_version"
         implementation "androidx.room:room-ktx:$room_version"
-        annotationProcessor "androidx.room:room-compiler:$room_version"
+        kapt "androidx.room:room-compiler:$room_version"
 
 
         // navigation
