--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,11 @@
         id 'com.android.application'
         id 'org.jetbrains.kotlin.android'
         id 'kotlin-kapt'
+        id 'com.google.gms.google-services'
+
     }
+    apply plugin: 'com.google.gms.google-services'
+
     android {
         namespace 'com.flaxstudio.wallpaperapp'
         compileSdk 33
@@ -68,5 +72,15 @@
 
         // coroutines
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+
+        // firebase authentication
+        implementation(platform("com.google.firebase:firebase-bom:32.1.1"))
+        implementation("com.google.firebase:firebase-analytics-ktx")
+        implementation 'com.google.firebase:firebase-auth-ktx'
+        implementation 'com.google.android.gms:play-services-auth:20.6.0'
+        implementation 'com.google.firebase:firebase-firestore-ktx:24.6.1'
+
+
+
 
     }
