--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.5'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
+
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
