--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WallpaperApp"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.razorpay.ApiKey"
+            android:value="rzp_test_gDktk0DfOwUVds" />
+        <activity
+            android:name=".SubscriptionActivity"
+            android:exported="false" />
         <activity
             android:name=".SignInActivity"
-            android:exported="true" > <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter> </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
 
         <receiver
             android:name=".utils.DownloadFinishReceiver"
